# eatmydata-org-eatmydata

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  .secretsignore  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.husky/: pre-commit
contrib/vite-plugin-tsx-locator/: README.md  package.json  runtime.js
contrib/vite-plugin-tsx-locator/src/: babel-plugin.test.ts  babel-plugin.ts  index.ts
deploy/: deploy.sh  set-urlmap.sh  urlmap-eu.yaml  urlmap-us.yaml
docker/: Dockerfile  README.md  nginx.conf
patches/: sheetjs-styles.patch
scripts/: build-demo-adventureworks.sh  build-demo-contoso.sh  build-demo-index.ts  build-demo-northwind.sh  build-demo-retail.ts  export-retail-xlsx.ts  extract-gemini-prices.ts  scan-secrets.test.ts  scan-secrets.ts
scripts/lib/: semantic-index-node.ts
src/: app-config.d.ts  index.css  index.tsx  test-setup.ts  vite-env.d.ts  worker-versions.d.ts
src/assets/config/: app-config.dev.json  app-config.prod.json
src/components/: action-failed-row.tsx  action-panel.tsx  action-result-link-card.tsx  action-result-view.tsx  action-top-bar.tsx  brand.tsx  chat-view.tsx  chevron-icon.tsx  collapsible-code.tsx  composer.tsx  cta-panel.tsx  data-source-card.tsx  data-source-selector.tsx  debug-log-view.tsx  echarts-dashboard.tsx  editable-name.tsx  jump-to-latest.tsx  message-list.tsx  message-stream.tsx  model-selector.tsx  pane-header.tsx  result-blocks.tsx  result-table-grid.tsx  saved-data-source-card.tsx  saved-query-card.tsx  sql-result-grid.tsx  status-icon.tsx  streamed-markdown.tsx  tool-call-card.tsx  tool-labels.ts  top-bar.tsx
src/components/confirmations/: analysis-review-confirmation.tsx  analysis-review-feedback-confirmation.tsx  decision-buttons.tsx  generic-text-confirmation.tsx  index.tsx  plan-confirmation.tsx  user-question-confirmation.tsx
src/components/data-sources/: ag-grid-modules.ts  ag-grid-theme.ts  cascade-drop-dialog.tsx  confirm-dialog.tsx  demo-dialog.tsx  import-dialog.tsx  list-panel.tsx  semantic-index-progress.tsx  source-detail.tsx  table-grid.tsx  view-editor.tsx
src/components/pii/: entity-badge.tsx  entity-list.tsx  highlighted-textarea.tsx
src/components/sidebar/: actions-sidebar.tsx
src/lib/: clear-all-data.ts  debug-log.ts  format-number.test.ts  format-number.ts  format-time.ts  random.test.ts  random.ts  remend.ts  sanitize-html.test.ts  sanitize-html.ts  smooth-stream.ts  stick-to-bottom.ts  storage.ts  tools.ts  types.ts
src/lib/actions/: action-live-store.ts  commit-review.ts  executor.test.ts  executor.ts  export.ts  render-limits.ts  rerun.ts  store.ts  types.ts
src/lib/agent/: agent-def.ts  confirmation.ts  cost.test.ts  cost.ts  describe-table.test.ts  echarts-validate.test.ts  echarts-validate.ts  labels.ts  log-middleware.ts  loop.ts  models.ts  prompt.ts  registry.test.ts  registry.ts  sample-sanitizer.test.ts  sample-sanitizer.ts  schema-manifest.test.ts  tools.ts
src/lib/agent/agents/: coder.test.ts  coder.test.ts.bak  coder.ts  index.ts  orchestrator.test.ts  orchestrator.ts  planner.test.ts  (+1 more)
src/lib/bert-ner/: decode.ts  pii-dataset.ts  quality.test.ts  runtime.test.ts  runtime.ts
src/lib/bge-embed/: runtime.test.ts  runtime.ts
src/lib/data-sources/: _diag.test.ts  ag-grid-sql.test.ts  ag-grid-sql.ts  create-from-file.ts  db.ts  demo-retail.ts  demo-source.ts  export-table.ts  identifier.test.ts  identifier.ts  import-into-existing.ts  import.ts  low-cardinality.test.ts  low-cardinality.ts  parse-csv.ts  parse-xlsx.test.ts  parse-xlsx.ts  resolver.ts  semantic-index-core.ts  semantic-index-status.ts  semantic-index.test.ts  semantic-index.ts  session.ts  store.ts  type-sniff.test.ts  type-sniff.ts  types.ts
src/lib/echarts/: loader.ts  patch-option.ts  shape.ts  sync-controller.test.ts  sync-controller.ts
src/lib/export/: xlsx.test.ts  xlsx.ts
src/lib/markdown/: cap-tables.test.ts  cap-tables.ts
src/lib/pii/: client.ts  regex.test.ts  regex.ts  worker.test.ts  worker.ts
src/lib/runtime/: agent-controls.ts  api.ts  chrome-ai-status.ts  client.ts  host.ts  openrouter-price-cache.ts  openrouter-pricing.test.ts  openrouter-pricing.ts  prime-model-prices.ts
src/lib/sandbox/: runtime.test.ts  runtime.ts
src/lib/sqlite/: boot-cleanup.ts  client.ts  ts-from-columns.test.ts  ts-from-columns.ts
src/lib/test-runner/: onnx-embed.ts  runner.ts  tests-bert-ner.ts  tests-bge-embed.ts  tests-result-blocks.ts  tests-vector-search.ts  tests-wa-sqlite.ts
src/lib/transformers/: client.ts  regex.test.ts  regex.ts  worker.test.ts  worker.ts
src/lib/wa-sqlite/: accessor.ts  busy.test.ts  busy.ts  capi.ts  client.ts  db.test.ts  db.ts  file-lock.test.ts  file-lock.ts  runtime.test.ts  runtime.ts  seed.ts  semantic-embed.ts  test-worker.ts  types.ts  validate.test.ts  validate.ts  vector-reference.ts  vector.perf.test.ts  vector.test.ts  worker.ts
src/lib/wa-sqlite-probe/: worker.ts
src/libs/: qjs.ts
src/routes/: chat.tsx  data-sources.tsx  embeddings.tsx  landing.tsx  pii.tsx  qjs.tsx  result.tsx  settings.tsx  sql.tsx  tests.tsx  wa-sqlite.tsx  xlsx.tsx
tools/: bundle-sandbox-libs.mjs  vite-plugin-tiny-pii.ts  vite-plugin-worker-version.ts
wasm/: wrapper.c
wasm/semantic/: PERF.md
wasm/semantic/src/: gguf.c  gguf.h  model.c  semantic-internal.h  semantic.c  semantic.h  tokenizer.c  unicode-data.c  unicode-data.h
wasm/semantic/test/: embed-compare.c  fetch-model.sh  sem-cli.c  verify.sh
wasm/semantic/tools/: convert-m2v-gguf.py  convert-ner-gguf.py  gen-unicode-data.py
wasm/sqlite-vector/src/: vec-config.c  vec-config.h  vec-distance.c  vec-distance.h  vec-quantize.c  vec-quantize.h  vec-scan.c  vec-scan.h  vec-types.c  vec-types.h  vector.c  vector.h
wasm/sqlite-vector/test/: leakcheck.c
wasm/tiny-pii/: build.py  package.json
wasm/transformers/: build.py  package.json
wasm/wa-sqlite/patches/: 0001-wasi-sdk-build.patch
wasm/wa-sqlite/src/: runtime_shim.c
(+38 files in other folders)
